--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,9 +1,11 @@
 worker_processes  1;
 
+events { }
+
 http {
-
-  keepalive_timeout  80;
-
+  
+  keepalive_timeout  65;
+  
   server {
       listen 80;
 
