--- a/heroku.yml
+++ b/heroku.yml
@@ -3,6 +3,6 @@ build:
     web: api/Dockerfile.web
   docker:
     worker: nginx/Dockerfile.worker
-run:
-  web: gunicorn -w 1 -b :5000 app:app
-  image: web
+  web:
+    command:
+      - gunicorn -w 1 -b :5000 app:app
