--- a/heroku.yml
+++ b/heroku.yml
@@ -3,6 +3,7 @@ build:
     web: api/Dockerfile.web
   docker:
     worker: nginx/Dockerfile.worker
+run:
   web:
     command:
       - gunicorn -w 1 -b :5000 app:app
