--- a/heroku.yml
+++ b/heroku.yml
@@ -4,7 +4,7 @@ build:
   docker:
     worker: nginx/Dockerfile.worker
 run:
-  web:
+  worker:
     command:
       - gunicorn -w 1 -b :5000 app:app
     image name: worker
