--- a/heroku.yml
+++ b/heroku.yml
@@ -2,7 +2,8 @@ build:
   docker:
     web: api/Dockerfile.web
     worker: nginx/Dockerfile.worker
-run:
-  worker: gunicorn -w 1 -b :5000 app:app
+release:
+  command:
+    - gunicorn -w 1 -b :5000 app:app
   image: worker
 
