--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,51 +1,5 @@
-beautifulsoup4==4.7.1
-Bottleneck==1.2.1
-certifi==2018.11.29
-chardet==3.0.4
-Click==7.0
-cycler==0.10.0
-cymem==2.0.2
-cytoolz==0.9.0.1
-dataclasses==0.6
-dill==0.2.9
-fastai==1.0.45
-fastprogress==0.1.20
-Flask==1.0.2
-gunicorn==19.9.0
-idna==2.8
-itsdangerous==1.1.0
-Jinja2==2.10
-kiwisolver==1.0.1
-MarkupSafe==1.1.0
-matplotlib==3.0.2
-msgpack==0.5.6
-msgpack-numpy==0.4.3.2
-murmurhash==1.0.2
-numexpr==2.6.9
-numpy==1.16.1
-nvidia-ml-py3==7.352.0
-packaging==19.0
-pandas==0.24.1
-Pillow==5.4.1
-plac==0.9.6
-preshed==2.0.1
-pyparsing==2.3.1
-python-dateutil==2.8.0
-pytz==2018.9
-PyYAML==3.13
-regex==2018.1.10
-requests==2.21.0
-scipy==1.2.1
-six==1.12.0
-soupsieve==1.8
-spacy==2.0.18
-thinc==6.12.1
-toolz==0.9.0
-torch==1.0.1.post2
-torchvision==0.2.1
-tqdm==4.31.1
-typing==3.6.6
-ujson==1.35
-urllib3==1.24.1
-Werkzeug==0.14.1
-wrapt==1.10.11
+numpy
+Flask
+gunicorn
+#https://download.pytorch.org/whl/nightly/cpu/torch_nightly-1.0.0.dev20181129-cp36-cp36m-linux_x86_64.whl
+#fastai==1.0.34
