--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
 before_install:
   - chmod +x ./model_download.sh
   - docker build -t quarkus7/nginx_mop ./nginx
-  - docker build -t quatkus7/app_mop ./api
+  - docker build -t quarkus7/app_mop ./api
 
 script:
   - docker run quarkus7/app_mop python test.py
