--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,3 +1,4 @@
 FROM nginx
 COPY ./default.conf /etc/nginx/conf.d/default.conf
-CMD /bin/bash -c "envsubst '\$PORT' > /etc/nginx/conf.d/default.conf"
+CMD sed -i -e 's/$PORT/'"$PORT"'/g' /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'
+
