--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,12 +1,12 @@
-  server {
-      listen $PORT;
-
-      location / {
-          proxy_pass http://0.0.0.0:$PORT;
-
-          proxy_set_header Host $host;
-          proxy_set_header X-Real-IP $remote_addr;
-          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      }
-  }
-
+http {
+    keepalive_timeout  65;
+    server {
+        listen $PORT;
+        location / {
+            proxy_pass http://0.0.0.0:8000;
+        proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            }
+       }
+}
