--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -2,4 +2,4 @@ FROM nginx
 
 COPY ./nginx.conf /etc/nginx/conf.d/nginx.conf
 
-CMD sed -i -e 's/$PORT/'"$PORT"'/g' /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'
+CMD sed -i -e 's/$PORT/'"$PORT"'/g' /etc/nginx/conf.d/nginx.conf && nginx -g 'daemon off;'
