--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,5 +1,5 @@
-FROM nginx
+FROM nginx:latest
 
-COPY ./nginx.conf /etc/nginx/nginx.conf
+COPY ./nginx /etc/nginx/conf.d
 
-CMD sed -i -e 's/$PORT/'"$PORT"'/g' /etc/nginx/nginx.conf && nginx -g 'daemon off;'
+CMD sed -i -e 's/$PORT/'"$PORT"'/g' /etc/nginx/conf.d && nginx -g 'daemon off;'
