--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,5 +1,5 @@
 FROM nginx:latest
 
-COPY ./nginx /etc/nginx/conf.d
+COPY ./nginx.conf /etc/nginx/conf.d/default.conf
 
-CMD sed -i -e 's/$PORT/'"$PORT"'/g' /etc/nginx/conf.d && nginx -g 'daemon off;'
+CMD sed -i -e 's/$PORT/'"$PORT"'/g' /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'
