--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,17 @@
 version: '3'
-
 services:
-
   api:
     container_name: api
     restart: always
     build: ./api
     ports:
       - "8000:8000"
-    command: gunicorn -w 1 -b :8000 app:app
-
+    command: gunicorn -w 1 -b 0.0.0.0:8000 app:app
   nginx:
     container_name: nginx
     restart: always
     build: ./nginx
     ports:
-      - "8001:8001"
+      - "80:80"
     depends_on:
       - api
